--- a/Keras_CIFAR10_Classification.ipynb
+++ b/Keras_CIFAR10_Classification.ipynb
@@ -1215,8 +1215,7 @@
         "for number in range(10):\n",
         "    test_img = np.expand_dims(x_val[number], axis=0)\n",
         "    predicted_val = model.predict_classes(test_img)[0]\n",
-        "    print(f\"Actual value: {y_val[number][0]} vs. predicted: {predicted_val}\")\n",
-        "print(\"Validation accuracy : %50 \")"
+        "    print(f\"Actual value: {y_val[number][0]} vs. predicted: {predicted_val}\")\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1232,8 +1231,7 @@
         "for number in range(10):\n",
         "    test_img = np.expand_dims(x_val[number], axis=0)\n",
         "    predicted_val = model_2.predict_classes(test_img)[0]\n",
-        "    print(f\"Actual value: {label_names[y_val[number][0]]} vs. predicted: {label_names[predicted_val]}\")\n",
-        "print(\"Validation accuracy : %50 \")"
+        "    print(f\"Actual value: {label_names[y_val[number][0]]} vs. predicted: {label_names[predicted_val]}\")\n"
       ],
       "execution_count": 0,
       "outputs": []
