--- a/TF-Keras_CIFAR10_Classification.ipynb
+++ b/TF-Keras_CIFAR10_Classification.ipynb
@@ -1263,8 +1263,7 @@
     }
    ],
    "source": [
-    "test_loss, test_acc = load_model.evaluate(x_test, y_test)\n",
-    "print(f\"Test loss : {test_loss:0.3}, Test Accuracy: {test_acc:0.2%}\")"
+    "test_loss, test_acc = load_model.evaluate(x_test, y_test)\n"
    ]
   },
   {
