--- a/TF-Keras_CIFAR10_Classification.ipynb
+++ b/TF-Keras_CIFAR10_Classification.ipynb
@@ -992,7 +992,7 @@
     "%%time\n",
     "nr_epochs = 30\n",
     "model.fit(x_train, y_train, batch_size=samples_per_batch,\n",
-    "            epochs=nr_epochs, verbose=1, validation_data = (x_val, y_val), callbacks=[tensorboard_callback, cp_callback])"
+    "            epochs=nr_epochs, verbose=1, validation_data = (x_val, y_val), callbacks=[tensorboard_callback])"
    ]
   },
   {
@@ -1026,7 +1026,7 @@
     "%%time\n",
     "nr_epochs = 25\n",
     "model_2.fit(x_train, y_train, batch_size=256,\n",
-    "            epochs=nr_epochs, verbose=0, validation_data = (x_val, y_val), callbacks=[tensorboard_callback2])"
+    "            epochs=nr_epochs, verbose=0, validation_data = (x_val, y_val), callbacks=[tensorboard_callback])"
    ]
   },
   {
