--- a/TF-Keras_CIFAR10_Classification.ipynb
+++ b/TF-Keras_CIFAR10_Classification.ipynb
@@ -1408,7 +1408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convertCIFER10Data(image):\n",
+    "def convertCIFAR10Data(image):\n",
     "    img = image.astype('float32')\n",
     "    img /= 255\n",
     "    c = np.zeros(32*32*3).reshape((1,32,32,3))\n",
@@ -1469,7 +1469,7 @@
    ],
    "source": [
     "image1 = im_read(\"cat.jpg\")\n",
-    "data1 = convertCIFER10Data(image1)"
+    "data1 = convertCIFAR10Data(image1)"
    ]
   },
   {
@@ -1549,7 +1549,7 @@
    ],
    "source": [
     "image2 = im_read(\"ship.jpg\")\n",
-    "data2 = convertCIFER10Data(image2)\n",
+    "data2 = convertCIFAR10Data(image2)\n",
     "p2 = load_model.predict_classes(data2)\n",
     "print(f\"Resim {label_names[p2[0]]}, olarak tahmin edildi.\")"
    ]
